# DBE

./: BESampling.sln  README.md
ARP/: AbsSampling.cpp  as_cl_template.txt
ARP/AND-OR/: AbsSamplingDFS.cpp  AbsSamplingDFSnonProper.cpp  AbsSamplingWorkspace.cpp  AbsSamplingWorkspace.hxx  DFSANDcontainer.cpp  DFSANDcontainer.hxx  SearchSpaceNodes.cpp  SearchSpaceNodes.hxx
ARP/BE/: Bucket.cpp  Bucket.hxx  MBEworkspace.cpp  MBEworkspace.hxx  MiniBucket-NN.cpp  MiniBucket.cpp  MiniBucket.hxx
ARP/CVO/: Graph.cpp  Graph.hxx  Graph_MinFillOrderComputation.cpp  VariableOrderComputation.cpp  VariableOrderComputation.hxx
ARP/Problem/: Config.h  DATA_SAMPLES.h  Function-NN.hxx  Function.cpp  Function.hxx  Globals.hxx  Net.h  Problem.cpp  Problem.hxx  Workspace.hxx
ARP/Utils/: AVLtree.cpp  AVLtreeInt64.cpp  AVLtreeInt64.hxx  AVLtreeObjects.cpp  AVLtreeObjects.hxx  AVLtreeSimple.cpp  MiscUtils.cpp  MiscUtils.hxx  Mutex.cpp  Sort.cxx  Sort.hxx
BESampling/: BESampling.cpp  BESampling.vcxproj  BESampling.vcxproj.filters  CMakeLists.txt  output.txt
BESampling/x64/Debug/: BESampling  bucket_samples_level_1.txt
testproblems/: 1CBW_F1.uai.elim  1bv1.uai  1bv1_var_elim_order-Width-StateSpaceSize.vo  grid10x10.f10.vo  grid10x10.f10.wrap_var_elim_order-StateSpaceSize.vo  grid20x20.f5.uai.ord.elim  grid40x40.f10.uai.ord.elim  grid80x80.f10.wrap.uai.vo  or_chain_1.fg.uai.ord.elim  or_chain_10.fg.uai.ord.elim  or_chain_139.fg.uai  or_chain_139.fg.uai.ord.elim  or_chain_2.fg.uai  or_chain_2.fg.uai.ord.elim  or_chain_3.fg.uai  or_chain_3.fg.uai.ord.elim  pedfile_Families_Type4_100_15.uai  pedfile_Families_Type4_100_15.uai.elim  pedigree13.uai.ord.elim  pedigree19.uai.ord.elim  pedigree20_var_elim_order-StateSpaceSize.vo  pedigree31.uai.ord.elim  pedigree34.uai.ord.elim  pedigree40.uai.ord.elim  pedigree41.uai.ord.elim  pedigree51.uai.ord.elim  pedigree7.uai.ord.elim  pedigree9.uai.ord.elim  rus_20_40_0_3.uai  rus_20_40_1_1.uai.ord.elim
